<resources>
    <string name="app_name">Middle Age Calculator</string>
    <string name="txt_fec_nac">Fecha Nacimiento:</string>
    <string name="txt_fec_act">Fecha Actual:</string>

    <string name="total_years">Años Totales:</string>
    <string name="total_months">Meses Totales:</string>
    <string name="total_days">Dias Totales:</string>

    <string name="point_blank">.</string>
    <string name="Result">Resultado</string>
    <string name="title_activity_menu"> Menu App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="option_age_calc">Age Calculator</string>

    <string name="dev_email">Pedroluis0542@gmail.com</string>
    <string name="dev_name">Pedro Luis</string>

    <!---->
    <string name="opt_gallery">Gallery</string>
    <string name="opt_slideshow">Slideshow</string>
    <string name="opt_tools">Tools</string>
    <string name="opt_communicate">Communicate</string>
    <string name="opt_share">Share</string>
    <string name="opt_send">Send</string>
</resources>
